added links to home page when clicking on logo

--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@
   margin-bottom: 20px;
   
 }
+.footertext {
+  text-align: center
+}
   /*!
  * Bootswatch v4.5.2
  * Homepage: https://bootswatch.com
