--- a/style.css
+++ b/style.css
@@ -34,15 +34,75 @@
 
   footer{
       margin-top: 25px;
+      position: fixed;
+     left: 0;
+    bottom: 0;
+     width: 100%;
+    color: black;
+    text-align: center;
   }
 .portfolio {
   text-align: center;
   margin-bottom: 20px;
   
 }
-.footertext {
-  text-align: center
+
+overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 90px 10px; /* Large padding which will shrink on scroll (using JS) */
+  transition: 0.4s; /* Adds a transition effect when the padding is decreased */
+  position: fixed; /* Sticky/fixed navbar */
+  width: 100%;
+  top: 0; /* At the top */
+  z-index: 99;
 }
+
+/* Style the navbar links */
+#navbar a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo */
+Nav #logo {
+  font-size: 35px;
+  font-weight: bold;
+  transition: 0.4s;
+}
+
+/* Links on mouse-over */
+nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active/current link */
+nav a.active {
+  color: white;
+}
+
+
+/* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
+@media screen and (max-width: 580px) {
+  #navbar {
+    padding: 20px 10px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
+  }
+  #navbar a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  #navbar-right {
+    float: none;
+  }
+}
+
   /*!
  * Bootswatch v4.5.2
  * Homepage: https://bootswatch.com
