added several CSS styling for the footer, font style and Nav Bar. Updated HTML footer coding and attached links

--- a/style.css
+++ b/style.css
@@ -13,42 +13,147 @@
   
   .col-11-m {
       float: left
-      width: 50%
+    
   }
-
+  p {
+    font-family: 'Domine', serif;
+    color: black;
+  }
+  h1 {
+    font-family: 'Domine', serif;
+  }
   img {
     border-radius: 50%;
     float: left;
-    margin-left: 40px;
+    max-width: 100%;
   }
 
+  
   nav {
       margin-bottom: 25px;
   }
-
+  .navbar-brand{ 
+  font-family: 'Kaushan Script', cursive;
+  font-size: larger;
+  }
   body {
 
     margin-left: 20px;
     margin-right: 20px;
   }
 
-  footer{
-      margin-top: 25px;
-      position: fixed;
-     left: 0;
-    bottom: 0;
-     width: 100%;
-    color: black;
-    text-align: center;
-  }
+  
 .portfolio {
   text-align: center;
   margin-bottom: 20px;
   
 }
+ /* STYLES SPECIFIC TO FOOTER  */
+footer {
+    position: fixed;
+    left: 0;  
+    bottom: 0;
+    width: 100%;
+    overflow:auto;
+    color: black;
+    text-align: center;
+    background-color:#343a40;
+}
+footer .col {
+  width: 190px;
+  height: auto;
+  float: left;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 0px 20px 20px 20px;
+}
+footer .col h1 {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 12px;
+  line-height: 17px;
+  padding: 20px 0px 5px 0px;
+  color: rgba(255,255,255,0.2);
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.250em;
+}
+footer .col ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+footer .col ul li {
+  color: #999999;
+  font-size: 14px;
+  font-family: inherit;
+  font-weight: bold;
+  padding: 5px 0px 5px 0px;
+  cursor: pointer;
+  transition: .2s;
+  -webkit-transition: .2s;
+  -moz-transition: .2s;
+}
+.social ul li {
+  display: inline-block;
+  padding-right: 5px !important;
+}
 
-overflow: hidden;
-  background-color: #f1f1f1;
+footer .col ul li:hover {
+  color: #ffffff;
+  transition: .1s;
+  -webkit-transition: .1s;
+  -moz-transition: .1s;
+}
+.clearfix {
+  clear: both;
+}
+@media only screen and (min-width: 1280px) {
+  .contain {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 1139px) {
+  .contain .social {
+    width: 1000px;
+    display: block;
+  }
+  .social h1 {
+    margin: 0px;
+  }
+}
+@media only screen and (max-width: 950px) {
+  footer .col {
+    width: 33%;
+  }
+  footer .col h1 {
+    font-size: 14px;
+  }
+  footer .col ul li {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 500px) {
+    footer .col {
+      width: 50%;
+    }
+    footer .col h1 {
+      font-size: 14px;
+    }
+    footer .col ul li {
+      font-size: 13px;
+    }
+}
+@media only screen and (max-width: 340px) {
+  footer .col {
+    width: 100%;
+  }
+
+/*nav {
+  overflow: hidden;
   padding: 90px 10px; /* Large padding which will shrink on scroll (using JS) */
   transition: 0.4s; /* Adds a transition effect when the padding is decreased */
   position: fixed; /* Sticky/fixed navbar */
@@ -58,19 +163,19 @@ overflow: hidden;
 }
 
 /* Style the navbar links */
-#navbar a {
+  nav a {
   float: left;
-  color: black;
-  text-align: center;
+  color:rgba(255,255,255,0.2);
+  text-align: left;
   padding: 12px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 12px;
   line-height: 25px;
   border-radius: 4px;
 }
 
 /* Style the logo */
-Nav #logo {
+.navbar-brand {
   font-size: 35px;
   font-weight: bold;
   transition: 0.4s;
@@ -102,6 +207,8 @@ nav a.active {
     float: none;
   }
 }
+
+
 
   /*!
  * Bootswatch v4.5.2
@@ -267,7 +374,7 @@ sup {
 }
 
 a {
-  color: #1a1a1a;
+  color: rgba(255,255,255,0.2);
   text-decoration: none;
   background-color: transparent;
 }
