--- a/style.css
+++ b/style.css
@@ -40,7 +40,11 @@
 
     margin-left: 20px;
     margin-right: 20px;
-  }
+    min-height: 400px;
+    margin-bottom: 150px;
+    clear: both;
+   }
+  
 
   
 .portfolio {
